fix: mobile header z-index

--- a/source/css/sprinter.less
+++ b/source/css/sprinter.less
@@ -56,6 +56,7 @@ header {
         min-width: 0;
         position: fixed;
         height: auto;
+        z-index: 1;
         // background: none;
     })
 }
